Fix sizing and alignment for back button

--- a/public/stylesheets/components/back-button.less
+++ b/public/stylesheets/components/back-button.less
@@ -1,8 +1,18 @@
-#back-button {
+@import '../utils/variables.less';
+
+a#back-button {
     display: flex;
     flex-direction: row;
 
+    display: inline-block;
+
     img {
-        max-height: 1em;
+        max-height: @back-button-max-height;
+        vertical-align: middle;
+        
+        padding-right: @back-button-center-spacing;
+    }
+    span {
+        vertical-align: middle;
     }
 }
